fix: Fixed MDEditor full screen mode (removed z-index for sidebar/header - no longer needed)

--- a/client/src/components/Header/Header.module.scss
+++ b/client/src/components/Header/Header.module.scss
@@ -4,7 +4,6 @@
     display: flex;
     width: 100%;
     height: 50px;
-    z-index: 10;
   }
 
   .logo {
