--- a/client/src/components/Static/MainSidebar.module.scss
+++ b/client/src/components/Static/MainSidebar.module.scss
@@ -7,7 +7,6 @@
   }
 
   .content {
-    position: relative;
     flex: 1;
     height: 100%;
     width: calc(100% - 230px);
@@ -20,11 +19,9 @@
   .sidebar {
     background-color: var(--backgroundSidebar);
     color: var(--textColor0);
-    position: relative;
     width: 230px;
     height: 100%;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-    z-index: 10;
     display: flex;
     flex-direction: column;
   }
